--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                 </div>
             </div>
             <!-- Left Arrow -->
-            <button onclick="moveSlide(-1)" class="absolute left-4 top-1/2 -translate-y-1/2 bg-white bg-opacity-70 hover:bg-pink-200 text-pink-600 rounded-full p-2 shadow-md focus:outline-none z-10">
+<!--             <button onclick="moveSlide(-1)" class="absolute left-4 top-1/2 -translate-y-1/2 bg-white bg-opacity-70 hover:bg-pink-200 text-pink-600 rounded-full p-2 shadow-md focus:outline-none z-10">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7"/></svg>
-            </button>
+            </button> -->
             <!-- Right Arrow -->
-            <button onclick="moveSlide(1)" class="absolute right-4 top-1/2 -translate-y-1/2 bg-white bg-opacity-70 hover:bg-pink-200 text-pink-600 rounded-full p-2 shadow-md focus:outline-none z-10">
+<!--             <button onclick="moveSlide(1)" class="absolute right-4 top-1/2 -translate-y-1/2 bg-white bg-opacity-70 hover:bg-pink-200 text-pink-600 rounded-full p-2 shadow-md focus:outline-none z-10">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7"/></svg>
-            </button>
+            </button> -->
             <!-- Indicators -->
             <div class="absolute bottom-6 left-1/2 -translate-x-1/2 flex space-x-2 z-10">
                 <button class="w-3 h-3 rounded-full bg-pink-400" onclick="goToSlide(0)" id="indicator-0"></button>
