--- a/product-details.html
+++ b/product-details.html
@@ -67,7 +67,7 @@
     <!-- Footer -->
     <footer class="bg-white py-6 mt-12 shadow-inner">
         <div class="container mx-auto px-6 text-center text-gray-500">
-            &copy; 2025 New Fashion. All rights reserved.
+            &copy; 2025 Phkar Daek. All rights reserved.
         </div>
     </footer>
 </body>
