--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Phkar Daek - Trendy Clothes</title>
     <link rel="icon" type="image/png" href="assets/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="products.js"></script>
     <script>
         function toggleMobileMenu() {
             const menu = document.getElementById('mobile-menu');
@@ -56,6 +57,66 @@
             const heroSlider = document.getElementById('hero-slider');
             heroSlider.addEventListener('mouseenter', stopAutoSlide);
             heroSlider.addEventListener('mouseleave', startAutoSlide);
+        });
+        
+
+        // Shuffle products array
+        function getShuffledProducts(arr) {
+            const shuffled = arr.slice();
+            for (let i = shuffled.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [shuffled[i], shuffled[j]] = [shuffled[j], shuffled[i]];
+            }
+            return shuffled;
+        }
+
+        function renderProductsRandom() {
+            const container = document.getElementById('products-container');
+            container.innerHTML = '';
+            const shuffledProducts = getShuffledProducts(products);
+            shuffledProducts.forEach(product => {
+                container.innerHTML += `
+                <div class="bg-white rounded-lg shadow p-6 flex flex-col items-center">
+                    <div class="relative w-48 h-64 mb-4">
+                        <img src="${product.image}" alt="${product.name}" class="w-full h-full object-cover rounded" />
+                        <span class="absolute top-2 left-2 bg-pink-600 text-white text-xs font-bold px-2 py-1 rounded shadow">${product.code}</span>
+                    </div>
+                    <div class="flex w-full justify-between items-center mb-2">
+                        <div class="flex flex-col items-start">
+                            <h4 class="text-xl font-semibold">${product.name}</h4>
+                            <p class="text-sm mt-1">
+                                <span class="font-semibold">Shipping: </span>
+                                ${product.shippingFee === 0 ? '<span class="text-green-600">Free</span>' : `$${product.shippingFee.toFixed(2)}`}
+                            </p>
+                        </div>
+                        <p class="text-pink-600 font-bold">$${product.price.toFixed(2)}</p>
+                    </div>
+                    <p class="text-gray-500 text-sm mb-2" style="white-space:pre-line;">${(product.description.length > 80 ? product.description.substring(0, 80) + '...' : product.description)}</p>
+                    <div class="flex w-full gap-2 mt-2">
+                        <a href="${product.detailsUrl}?id=${product.id}" class="flex-1 bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition text-center inline-flex items-center justify-center">View Details</a>
+                        <a href="https://t.me/Pe_av" target="_blank" class="flex-1 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition text-center inline-flex items-center justify-center">Contact to Buy</a>
+                    </div>
+                </div>
+                `;
+            });
+        }
+
+        // Automatically render products in random order on page load
+        document.addEventListener('DOMContentLoaded', function() {
+            if (document.getElementById('products-container')) {
+                renderProductsRandom();
+            }
+        });
+
+
+        window.addEventListener('DOMContentLoaded', () => {
+            updateSlider();
+            startAutoSlide();
+            // Pause on hover
+            const heroSlider = document.getElementById('hero-slider');
+            heroSlider.addEventListener('mouseenter', stopAutoSlide);
+            heroSlider.addEventListener('mouseleave', startAutoSlide);
+            renderProducts();
         });
     </script>
     <style>
@@ -117,13 +178,13 @@
                 </div>
             </div>
             <!-- Left Arrow -->
-            <button onclick="moveSlide(-1)" class="absolute left-4 top-1/2 -translate-y-1/2 bg-white bg-opacity-70 hover:bg-pink-200 text-pink-600 rounded-full p-2 shadow-md focus:outline-none z-10">
+            <!-- <button onclick="moveSlide(-1)" class="absolute left-4 top-1/2 -translate-y-1/2 bg-white bg-opacity-70 hover:bg-pink-200 text-pink-600 rounded-full p-2 shadow-md focus:outline-none z-10">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7"/></svg>
-            </button>
+            </button> -->
             <!-- Right Arrow -->
-            <button onclick="moveSlide(1)" class="absolute right-4 top-1/2 -translate-y-1/2 bg-white bg-opacity-70 hover:bg-pink-200 text-pink-600 rounded-full p-2 shadow-md focus:outline-none z-10">
+            <!-- <button onclick="moveSlide(1)" class="absolute right-4 top-1/2 -translate-y-1/2 bg-white bg-opacity-70 hover:bg-pink-200 text-pink-600 rounded-full p-2 shadow-md focus:outline-none z-10">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7"/></svg>
-            </button>
+            </button> -->
             <!-- Indicators -->
             <div class="absolute bottom-6 left-1/2 -translate-x-1/2 flex space-x-2 z-10">
                 <button class="w-3 h-3 rounded-full bg-pink-400" onclick="goToSlide(0)" id="indicator-0"></button>
@@ -144,86 +205,7 @@
     <section id="shop" class="py-16">
         <div class="container mx-auto px-6">
             <h3 class="text-3xl font-bold mb-8 text-center">Featured Products</h3>
-            <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-8">
-                <!-- Product 1 -->
-                <div class="bg-white rounded-lg shadow p-6 flex flex-col items-center">
-                    <img src="assets/dress01.jpg" alt="Summer Dress" class="w-48 h-64 object-cover rounded mb-4">
-                    <div class="flex w-full justify-between items-center mb-2">
-                        <h4 class="text-xl font-semibold">Summer Dress</h4>
-                        <p class="text-pink-600 font-bold">$49.99</p>
-                    </div>
-                    <p class="text-gray-500 text-sm mb-2">Lightweight floral dress perfect for sunny days and casual outings.</p>
-                    <div class="flex w-full gap-2 mt-2">
-                        <a href="product-details.html" class="flex-1 bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition text-center inline-flex items-center justify-center">View Details</a>
-                        <a href="https://t.me/Pe_av" target="_blank" class="flex-1 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition text-center inline-flex items-center justify-center">Contact to Buy</a>
-                    </div>
-                </div>
-                <!-- Product 2 -->
-                <div class="bg-white rounded-lg shadow p-6 flex flex-col items-center">
-                    <img src="assets/dress02.jpg" alt="Denim Dress" class="w-48 h-64 object-cover rounded mb-4">
-                    <div class="flex w-full justify-between items-center mb-2">
-                        <h4 class="text-xl font-semibold">Denim Dress</h4>
-                        <p class="text-pink-600 font-bold">$69.99</p>
-                    </div>
-                    <p class="text-gray-500 text-sm mb-2">Trendy denim dress with a modern cut, great for day or night.</p>
-                    <div class="flex w-full gap-2 mt-2">
-                        <a href="product-details.html" class="flex-1 bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition text-center inline-flex items-center justify-center">View Details</a>
-                        <a href="https://t.me/Pe_av" target="_blank" class="flex-1 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition text-center inline-flex items-center justify-center">Contact to Buy</a>
-                    </div>
-                </div>
-                <!-- Product 3 -->
-                <div class="bg-white rounded-lg shadow p-6 flex flex-col items-center">
-                    <img src="assets/dress03.jpg" alt="Casual Dress" class="w-48 h-64 object-cover rounded mb-4">
-                    <div class="flex w-full justify-between items-center mb-2">
-                        <h4 class="text-xl font-semibold">Casual Dress</h4>
-                        <p class="text-pink-600 font-bold">$39.99</p>
-                    </div>
-                    <p class="text-gray-500 text-sm mb-2">Comfortable and stylish, ideal for everyday wear and relaxing weekends.</p>
-                    <div class="flex w-full gap-2 mt-2">
-                        <a href="product-details.html" class="flex-1 bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition text-center inline-flex items-center justify-center">View Details</a>
-                        <a href="https://t.me/Pe_av" target="_blank" class="flex-1 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition text-center inline-flex items-center justify-center">Contact to Buy</a>
-                    </div>
-                </div>
-                <!-- Product 4 -->
-                <div class="bg-white rounded-lg shadow p-6 flex flex-col items-center">
-                    <img src="assets/dress06.jpg" alt="Elegant Gown" class="w-48 h-64 object-cover rounded mb-4">
-                    <div class="flex w-full justify-between items-center mb-2">
-                        <h4 class="text-xl font-semibold">Elegant Gown</h4>
-                        <p class="text-pink-600 font-bold">$129.99</p>
-                    </div>
-                    <p class="text-gray-500 text-sm mb-2">A stunning gown for special occasions, featuring elegant details and a flattering fit.</p>
-                    <div class="flex w-full gap-2 mt-2">
-                        <a href="product-details.html" class="flex-1 bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition text-center inline-flex items-center justify-center">View Details</a>
-                        <a href="https://t.me/Pe_av" target="_blank" class="flex-1 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition text-center inline-flex items-center justify-center">Contact to Buy</a>
-                    </div>
-                </div>
-                <!-- Product 5 -->
-                <div class="bg-white rounded-lg shadow p-6 flex flex-col items-center">
-                    <img src="assets/dress07.jpg" alt="Boho Maxi Dress" class="w-48 h-64 object-cover rounded mb-4">
-                    <div class="flex w-full justify-between items-center mb-2">
-                        <h4 class="text-xl font-semibold">Boho Maxi Dress</h4>
-                        <p class="text-pink-600 font-bold">$59.99</p>
-                    </div>
-                    <p class="text-gray-500 text-sm mb-2">Flowy maxi dress with bohemian patterns, perfect for festivals and vacations.</p>
-                    <div class="flex w-full gap-2 mt-2">
-                        <a href="product-details.html" class="flex-1 bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition text-center inline-flex items-center justify-center">View Details</a>
-                        <a href="https://t.me/Pe_av" target="_blank" class="flex-1 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition text-center inline-flex items-center justify-center">Contact to Buy</a>
-                    </div>
-                </div>
-                <!-- Product 6 -->
-                <div class="bg-white rounded-lg shadow p-6 flex flex-col items-center">
-                    <img src="assets/dress08.jpg" alt="Classic Black Dress" class="w-48 h-64 object-cover rounded mb-4">
-                    <div class="flex w-full justify-between items-center mb-2">
-                        <h4 class="text-xl font-semibold">Classic Black Dress</h4>
-                        <p class="text-pink-600 font-bold">$79.99</p>
-                    </div>
-                    <p class="text-gray-500 text-sm mb-2">Timeless black dress that never goes out of style, suitable for any event.</p>
-                    <div class="flex w-full gap-2 mt-2">
-                        <a href="product-details.html" class="flex-1 bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition text-center inline-flex items-center justify-center">View Details</a>
-                        <a href="https://t.me/Pe_av" target="_blank" class="flex-1 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition text-center inline-flex items-center justify-center">Contact to Buy</a>
-                    </div>
-                </div>
-            </div>
+            <div id="products-container" class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-8"></div>
         </div>
     </section>
 
@@ -286,7 +268,7 @@
     <!-- Footer -->
     <footer class="bg-white py-6 mt-12 shadow-inner">
         <div class="container mx-auto px-6 text-center text-gray-500">
-            &copy; 2025 New Fashion. All rights reserved.
+            &copy; 2025 Phkar Daek. All rights reserved.
         </div>
     </footer>
 </body>
