--- a/product-details.html
+++ b/product-details.html
@@ -6,6 +6,7 @@
     <title>Product Details - Phkar Daek</title>
     <link rel="icon" type="image/png" href="assets/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="products.js"></script>
     <style>
         html { scroll-behavior: smooth; }
     </style>
@@ -37,24 +38,16 @@
                 <div class="flex-shrink-0 w-full md:w-1/2 flex flex-col items-center">
                     <div class="w-80 h-[28rem] mb-4 relative">
                         <img id="mainImage" src="assets/dress01.jpg" alt="Product Image" class="w-full h-full object-cover rounded-lg shadow-lg transition duration-300" />
-                    </div>
-                    <div class="flex gap-3 justify-center">
-                        <img onclick="document.getElementById('mainImage').src='assets/dress01.jpg'" src="assets/dress01.jpg" alt="Summer Dress 1" class="w-20 h-24 object-cover rounded cursor-pointer border-2 border-pink-400" />
-                        <img onclick="document.getElementById('mainImage').src='assets/dress02.jpg'" src="assets/dress02.jpg" alt="Summer Dress 2" class="w-20 h-24 object-cover rounded cursor-pointer border-2 border-transparent hover:border-pink-400" />
-                        <img onclick="document.getElementById('mainImage').src='assets/dress03.jpg'" src="assets/dress03.jpg" alt="Summer Dress 3" class="w-20 h-24 object-cover rounded cursor-pointer border-2 border-transparent hover:border-pink-400" />
+                        <span id="productCode" class="absolute top-2 left-2 bg-pink-600 text-white text-xs font-bold px-2 py-1 rounded shadow">1001</span>
                     </div>
                 </div>
                 <!-- Product Info -->
                 <div class="w-full md:w-1/2">
-                    <h2 class="text-3xl font-bold mb-2">Summer Dress</h2>
-                    <p class="text-pink-600 text-2xl font-bold mb-4">$49.99</p>
-                    <p class="text-gray-600 mb-6">Lightweight floral dress perfect for sunny days and casual outings. Made from premium cotton blend for comfort and breathability. Available in multiple sizes and colors.</p>
-                    <ul class="mb-6 list-disc list-inside text-gray-500">
-                        <li>Material: Cotton Blend</li>
-                        <li>Available Sizes: S, M, L, XL</li>
-                        <li>Colors: Pink, Blue, Yellow</li>
-                        <li>Care: Machine wash cold</li>
-                    </ul>
+                    <h2 id="productName" class="text-3xl font-bold mb-2">Product Name</h2>
+                    <p id="productPrice" class="text-pink-600 text-2xl font-bold mb-4">$0.00</p>
+                    <p id="productDescription" class="text-gray-600 mb-6">Product description.</p>
+                    <ul id="productDetailsList" class="mb-6 list-disc list-inside text-gray-500"></ul>
+                    <p id="productShipping" class="text-sm mb-4"></p>
                     <div class="flex gap-4">
                         <button class="bg-pink-600 text-white px-6 py-3 rounded hover:bg-pink-700 transition font-semibold">Contact to Buy</button>
                         <a href="index.html#shop" class="bg-gray-200 text-gray-700 px-6 py-3 rounded hover:bg-gray-300 transition font-semibold">Back to Shop</a>
@@ -64,10 +57,48 @@
         </div>
     </section>
 
+    <script>
+        function getProductIdFromUrl() {
+            const params = new URLSearchParams(window.location.search);
+            return parseInt(params.get('id'), 10);
+        }
+        function renderProductDetails() {
+            const productId = getProductIdFromUrl();
+            const product = products.find(p => p.id === productId);
+            if (!product) {
+                document.getElementById('productName').textContent = 'Product Not Found';
+                document.getElementById('productPrice').textContent = '';
+                document.getElementById('productDescription').textContent = '';
+                document.getElementById('productShipping').textContent = '';
+                document.getElementById('mainImage').src = 'assets/logo.png';
+                document.getElementById('productDetailsList').innerHTML = '';
+                document.getElementById('productCode').textContent = '';
+                return;
+            }
+            document.getElementById('mainImage').src = product.image;
+            document.getElementById('productName').textContent = product.name;
+            document.getElementById('productPrice').textContent = `$${product.price.toFixed(2)}`;
+            document.getElementById('productDescription').innerHTML = product.description;
+            document.getElementById('productShipping').innerHTML = `<span class='font-semibold'>Shipping: </span>${product.shippingFee === 0 ? '<span class=\'text-green-600\'>Free</span>' : `$${product.shippingFee.toFixed(2)}`}`;
+            // Render product details
+            const details = product.productDetails;
+            let detailsHtml = '';
+            if (details) {
+                detailsHtml += `<li>Material: ${details.material}</li>`;
+                detailsHtml += `<li>Available Sizes: ${details.sizes}</li>`;
+                detailsHtml += `<li>Colors: ${details.colors}</li>`;
+                detailsHtml += `<li>Care: ${details.care}</li>`;
+            }
+            document.getElementById('productDetailsList').innerHTML = detailsHtml;
+            document.getElementById('productCode').textContent = product.code;
+        }
+        document.addEventListener('DOMContentLoaded', renderProductDetails);
+    </script>
+
     <!-- Footer -->
     <footer class="bg-white py-6 mt-12 shadow-inner">
         <div class="container mx-auto px-6 text-center text-gray-500">
-            &copy; 2025 New Fashion. All rights reserved.
+            &copy; 2025 Phkar Daek. All rights reserved.
         </div>
     </footer>
 </body>
